Prevent site names from wrapping over two lines

--- a/client/my-sites/checkout/checkout-thank-you/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/style.scss
@@ -762,6 +762,10 @@
 	}
 }
 
+.jetpack-checkout-siteless-thank-you-completed__site-name {
+	white-space: nowrap;
+}
+
 .jetpack-checkout-siteless-thank-you {
 	.jetpack-checkout-siteless-thank-you__card {
 		display: flex;
